--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Steffen Uldal Lim</p>
+					<p class="text-name">Steffen Uldal</p>
 					<p class="text-title-company">Student at SDU</p>
 					<p class="text-title-company">Technology and engineering in robotics</p>
 				</div>
 				<div class="col">
-					<img src="assets/Icon.png" alt="Company Logo">
+					<img src="assets/Icon.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
