--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Technology and engineering in robotics</p>
 				</div>
 				<div class="col">
-					<img src="assets/Icon.jpg" alt="Company Logo">
+					<img src="assets/Icon.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
